--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="socasl-container">
+        <div class="social-container">
           <p class="social-media-title">Social media</p>
           <ul class="social-list">
             <li class="footer-icon">
@@ -452,6 +452,24 @@
             </li>
           </ul>
         </div>
+        <div class="sub-conteiner">
+          <p class="sub-title">Subscribe</p>
+          <form class="sub-form">
+            <label for="email"></label>
+            <input
+              class="sub-email"
+              type="text"
+              name="email"
+              placeholder="E-mail"
+            />
+            <button class="sub-btn" type="button">
+              Subscribe
+              <svg class="sub-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
@@ -468,6 +486,43 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
+        <form class="modal-window-form">
+          <p class="modal-window-title">
+            Leave your contacts and we will call you back
+          </p>
+          <label class="mw-text-form">
+            Name
+            <input class="mw-input-form" type="text" name="name" />
+          </label>
+          <label class="mw-text-form">
+            Phone
+            <input class="mw-input-form" type="tel" name="phone" />
+          </label>
+          <label class="mw-text-form">
+            Email
+            <input class="mw-input-form" type="email" name="email" />
+          </label>
+          <label class="mw-text-form">
+            Comment
+            <textarea
+              class="mw-input-form"
+              name=""
+              id=""
+              cols="30"
+              rows="10"
+            ></textarea>
+          </label>
+          <div>
+            <input type="checkbox" name="" id="" />
+            <label class="excerpt-text"
+              >I accept the terms and conditions of the
+              <a href="">Privacy Policy</a>
+            </label>
+          </div>
+          <div class="button-mw">
+            <button class="modal-window-btn">Send</button>
+          </div>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
