--- a/index.html
+++ b/index.html
@@ -455,14 +455,15 @@
         <div class="sub-conteiner">
           <p class="sub-title">Subscribe</p>
           <form class="sub-form">
-            <label for="email"></label>
-            <input
-              class="sub-email"
-              type="text"
-              name="email"
-              placeholder="E-mail"
-            />
-            <button class="sub-btn" type="button">
+            <label class="sub-label">
+              <input
+                class="sub-email"
+                type="text"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="sub-btn" type="submit">
               Subscribe
               <svg class="sub-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
@@ -486,37 +487,83 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
+        <p class="modal-window-title">
+          Leave your contacts and we will call you back
+        </p>
         <form class="modal-window-form">
-          <p class="modal-window-title">
-            Leave your contacts and we will call you back
-          </p>
-          <label class="mw-text-form">
-            Name
-            <input class="mw-input-form" type="text" name="name" />
-          </label>
-          <label class="mw-text-form">
-            Phone
-            <input class="mw-input-form" type="tel" name="phone" />
-          </label>
-          <label class="mw-text-form">
-            Email
-            <input class="mw-input-form" type="email" name="email" />
-          </label>
-          <label class="mw-text-form">
-            Comment
-            <textarea
-              class="mw-input-form"
-              name=""
-              id=""
-              cols="30"
-              rows="10"
-            ></textarea>
-          </label>
-          <div>
-            <input type="checkbox" name="" id="" />
-            <label class="excerpt-text"
-              >I accept the terms and conditions of the
-              <a href="">Privacy Policy</a>
+          <div class="mw-container">
+            <label class="mw-text-form" for="user-name">
+              Name
+              <div class="icon-container">
+                <input
+                  class="mw-input-form"
+                  type="text"
+                  name="name"
+                  id="user-name"
+                />
+                <svg class="modal-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-person-black"></use>
+                </svg>
+              </div>
+            </label>
+            <label class="mw-text-form" for="user-name">
+              Phone
+              <div class="icon-container">
+                <input
+                  class="mw-input-form"
+                  type="tel"
+                  name="phone"
+                  id="user-name"
+                />
+                <svg class="modal-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-phone-black"></use>
+                </svg>
+              </div>
+            </label>
+            <label class="mw-text-form" for="user-name">
+              Email
+              <div class="icon-container">
+                <input
+                  class="mw-input-form"
+                  type="email"
+                  name="mail"
+                  id="user-name"
+                />
+                <svg class="modal-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-email-black"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+          <div class="comment-container">
+            <label class="mw-text-form" for="user-comment">
+              Comment
+              <textarea
+                class="mw-textarea-form"
+                id="user-comment"
+                name="user-comment"
+                cols="4"
+                rows="4"
+                placeholder="Text input"
+              ></textarea>
+            </label>
+          </div>
+          <div class="chechbox-container">
+            <input
+              class="visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              value="true"
+              id="user-privacy"
+            />
+            <label class="excerpt-text" for="user-privacy">
+              <span class="expert-link">
+                <svg class="check-on" width="10" heigth="8">
+                  <use href="./images/icons.svg#icon-click"></use>
+                </svg>
+                I accept the terms and conditions of the
+                <a class="consumer-agreement-link" href="">Privacy Policy</a>
+              </span>
             </label>
           </div>
           <div class="button-mw">
