--- a/portfolio.html
+++ b/portfolio.html
@@ -275,6 +275,7 @@
         </div>
       </section>
     </main>
+
     <footer class="bootom-page">
       <div class="container">
         <div class="logo-slogan">
@@ -286,7 +287,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="socasl-container">
+        <div class="social-container">
           <p class="social-media-title">Social media</p>
           <ul class="social-list">
             <li class="footer-icon">
@@ -318,6 +319,25 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="sub-conteiner">
+          <p class="sub-title">Subscribe</p>
+          <form class="sub-form">
+            <label class="sub-label">
+              <input
+                class="sub-email"
+                type="text"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="sub-btn" type="submit">
+              Subscribe
+              <svg class="sub-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
