--- a/index.html
+++ b/index.html
@@ -492,48 +492,44 @@
         </p>
         <form class="modal-window-form">
           <div class="mw-container">
-            <label class="mw-text-form" for="user-name">
-              Name
-              <div class="icon-container">
-                <input
-                  class="mw-input-form"
-                  type="text"
-                  name="name"
-                  id="user-name"
-                />
-                <svg class="modal-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-person-black"></use>
-                </svg>
-              </div>
-            </label>
-            <label class="mw-text-form" for="user-name">
-              Phone
-              <div class="icon-container">
-                <input
-                  class="mw-input-form"
-                  type="tel"
-                  name="phone"
-                  id="user-name"
-                />
-                <svg class="modal-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-phone-black"></use>
-                </svg>
-              </div>
-            </label>
-            <label class="mw-text-form" for="user-name">
-              Email
-              <div class="icon-container">
-                <input
-                  class="mw-input-form"
-                  type="email"
-                  name="mail"
-                  id="user-name"
-                />
-                <svg class="modal-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-email-black"></use>
-                </svg>
-              </div>
-            </label>
+            <label class="mw-text-form" for="user-name"> Name </label>
+            <div class="icon-container">
+              <input
+                class="mw-input-form"
+                type="text"
+                name="name"
+                id="user-name"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
+
+            <label class="mw-text-form" for="user-phone"> Phone </label>
+            <div class="icon-container">
+              <input
+                class="mw-input-form"
+                type="tel"
+                name="phone"
+                id="user-phone"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
+
+            <label class="mw-text-form" for="user-mail"> Email </label>
+            <div class="icon-container">
+              <input
+                class="mw-input-form"
+                type="email"
+                name="mail"
+                id="user-mail"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
           </div>
           <div class="comment-container">
             <label class="mw-text-form" for="user-comment">
@@ -558,7 +554,7 @@
             />
             <label class="excerpt-text" for="user-privacy">
               <span class="expert-link">
-                <svg class="check-on" width="10" heigth="8">
+                <svg class="check-on" width="10" height="8">
                   <use href="./images/icons.svg#icon-click"></use>
                 </svg>
                 I accept the terms and conditions of the
