--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
             <label class="sub-label">
               <input
                 class="sub-email"
-                type="text"
+                type="email"
                 name="email"
                 placeholder="E-mail"
               />
@@ -497,15 +497,16 @@
               <input
                 class="mw-input-form"
                 type="text"
-                name="name"
+                name="user-name"
                 id="user-name"
               />
               <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
             </div>
-
-            <label class="mw-text-form" for="user-phone"> Phone </label>
+          </div>
+          <div class="mw-container">
+            <label class="mw-text-form" for="user-phone">Phone</label>
             <div class="icon-container">
               <input
                 class="mw-input-form"
@@ -517,7 +518,8 @@
                 <use href="./images/icons.svg#icon-phone-black"></use>
               </svg>
             </div>
-
+          </div>
+          <div class="mw-container">
             <label class="mw-text-form" for="user-mail"> Email </label>
             <div class="icon-container">
               <input
