--- a/index.html
+++ b/index.html
@@ -534,17 +534,15 @@
             </div>
           </div>
           <div class="comment-container">
-            <label class="mw-text-form" for="user-comment">
-              Comment
-              <textarea
-                class="mw-textarea-form"
-                id="user-comment"
-                name="user-comment"
-                cols="4"
-                rows="4"
-                placeholder="Text input"
-              ></textarea>
-            </label>
+            <label class="mw-text-form" for="user-comment"> Comment </label>
+            <textarea
+              class="mw-textarea-form"
+              id="user-comment"
+              name="user-comment"
+              cols="4"
+              rows="4"
+              placeholder="Text input"
+            ></textarea>
           </div>
           <div class="chechbox-container">
             <input
