--- a/portfolio.html
+++ b/portfolio.html
@@ -326,7 +326,7 @@
             <label class="sub-label">
               <input
                 class="sub-email"
-                type="text"
+                type="email"
                 name="email"
                 placeholder="E-mail"
               />
