--- a/index.html
+++ b/index.html
@@ -546,11 +546,12 @@
           </div>
           <div class="chechbox-container">
             <input
-              class="visually-hidden"
+              class="check-input"
               type="checkbox"
               name="user-privacy"
               value="true"
               id="user-privacy"
+              checked
             />
             <label class="excerpt-text" for="user-privacy">
               <span class="expert-link">
@@ -558,8 +559,8 @@
                   <use href="./images/icons.svg#icon-click"></use>
                 </svg>
                 I accept the terms and conditions of the
-                <a class="consumer-agreement-link" href="">Privacy Policy</a>
               </span>
+              <a class="consumer-agreement-link" href="">Privacy Policy</a>
             </label>
           </div>
           <div class="button-mw">
