--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
           </div>
           <div class="chechbox-container">
             <input
-              class="check-input"
+              class="check-input visually-hidden"
               type="checkbox"
               name="user-privacy"
               value="true"
