--- a/index.html
+++ b/index.html
@@ -62,11 +62,7 @@
       <section class="main-focus">
         <div class="container">
           <h1 class="main-focus-text">Effective Solutions for Your Business</h1>
-          <button
-            type="button"
-            class="main-button"
-            data-modal-open="modalWindow"
-          >
+          <button type="button" class="main-button" data-modal-open>
             Order Service
           </button>
         </div>
@@ -476,13 +472,9 @@
 
     <!-- modal window -->
 
-    <div class="is-hidden" data-modal="modalWindow">
+    <div class="modal-window is-hidden" data-modal>
       <div class="modal-window-content">
-        <button
-          type="button"
-          class="modal-window-close"
-          data-modal-close="modalWindow"
-        >
+        <button type="button" class="modal-window-close" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
