--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                   <use href="./images/icons.svg#icon-click"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
+              I accept the term1 and conditions of the
               <a class="consumer-agreement-link" href="">Privacy Policy</a>
             </label>
           </div>
